--- a/Source/Core/Core.csproj
+++ b/Source/Core/Core.csproj
@@ -177,6 +177,9 @@
     <Compile Include="Duplicator.cs" />
     <Compile Include="Inline.cs" />
     <Compile Include="LambdaHelper.cs" />
+    <Compile Include="MaxHolesLambdaLifter.cs" />
+    <Compile Include="LambdaLiftingMaxHolesFiller.cs" />
+    <Compile Include="LambdaLiftingTemplate.cs" />
     <Compile Include="LoopUnroll.cs" />
     <Compile Include="OOLongUtil.cs" />
     <Compile Include="Parser.cs" />
