Prepare for implementation of inductive sequentialization
* Disable existing pending-async creation (to yielding procedures) and their
  automatic elimination (i.e., inlining).
* Most importantly, we go back to a setting where atomic actions do not change
  across layers.
* Extract core CIVL types to separate file (CivlCoreTypes.cs).
* Refactor transition relation computation and witness functions.

--- a/Source/Concurrency/Concurrency.csproj
+++ b/Source/Concurrency/Concurrency.csproj
@@ -90,6 +90,7 @@
     <Compile Include="YieldTypeChecker.cs" />
     <Compile Include="CivlUtil.cs" />
     <Compile Include="Witnesses.cs" />
+    <Compile Include="CivlCoreTypes.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
