Add pending async sanity checkers
We check that the count of pending asyncs is nonnegative and that every
atomic action only creates pending ayncs it declares.

--- a/Source/Concurrency/Concurrency.csproj
+++ b/Source/Concurrency/Concurrency.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Witnesses.cs" />
     <Compile Include="CivlCoreTypes.cs" />
     <Compile Include="InductiveSequentialization.cs" />
+    <Compile Include="PendingAsyncChecker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
